adicionando o conteudo das telas de travel, organization e sponsors, tambem foi alterado a forma que as telas sao criadas e chamadas ao navegar pelo site de forma que o header e o footer nao sao recarregados

--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -26,8 +26,8 @@ body {
   }
 
 
-  @media only screen and (max-width: 389px) {
+  /* @media only screen and (max-width: 389px) {
     .footer-svg {
       width: 15vh;
     }
-  }
+  } */
