--- a/styles/index.css
+++ b/styles/index.css
@@ -65,7 +65,8 @@ html {
   }
 
   .pl-2{
-    padding-left: 20px;
+    /* padding-left: 20px; */
+    padding: 0vh 0vh 0vh 4vh;
   }
 
   #btnTopo {
