--- a/styles/sponsors.css
+++ b/styles/sponsors.css
@@ -14,6 +14,63 @@
     margin-bottom: 5px;
   }
 
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px; /*20px*/
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  /* Estilo para cada card */
+  .card {
+      width: calc(20% - 20px); /* 20% do espaço disponível com 20px de gap */
+      background-color: #f9fafa; /*#f8f9fa*/
+      text-align: center;
+  }
+
+  /* Estilo para o texto dentro dos cards */
+  .card p {
+    margin: 0;
+  }
+
+  .card:hover{
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  }
+
+  /* Estilo para a primeira linha dos cards (equivalente ao cabeçalho da tabela) */
+  .card-header p:first-child {
+      background-color: #005047;
+      color: white;
+      font-size: 20px;
+  }
+  .card-header p:last-child{
+    padding-top: 5%;
+    font-size: 25px;
+  }
+
+  .card-body{
+    padding: 5%;
+    font-size: 16px;
+  }
+  .card-body p{
+    border-bottom: 1px solid rgb(155, 155, 155);
+    padding: 5%;
+  }
+
+  /* Estilo para responsividade */
+  @media (max-width: 768px) {
+      .card-container {
+          flex-direction: column; /* Mudar para coluna em dispositivos menores */
+          align-items: center;
+      }
+
+      .card {
+          width: 100%; /* Ocupar toda a largura disponível */
+      }
+  }
+
   @media only screen and (width: 344px) {
     .imagens img {
       width: 35vh;
