--- a/styles/venue-e-travel.css
+++ b/styles/venue-e-travel.css
@@ -57,6 +57,41 @@ iframe{
   width: 100%;
 }
 
+/* Bento */
+.bento {
+  /* min-block-size: 100vh; */
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1ch;
+  padding: 1ch;
+}
+
+.bento__container {
+  display: grid;
+  /* grid-template-rows: 3fr 1fr 1fr 2fr 2fr 3fr; */
+  gap: 1ch;
+  min-height: inherit;
+  flex: 2 0 320px;
+}
+
+
+.bento__container[variant-2] { 
+  grid-template-columns:3fr 2fr 2fr 3fr;  /* original: 2fr 3fr 1fr 2fr modificacao1: 3fr 1fr 2fr 2fr*/
+}
+
+.bento__item {
+  height: 100%; width: 100%;
+  grid-column: var(--columns, span 1);
+  grid-row: var(--rows, span 1);
+  background-color: var(--bg);
+  border-radius: 1rem;
+}
+
+.bento__item img{
+  height: 100%;
+  width: 100%
+}
+
 #logoHotel{
   width: 45vh;
   height: 100%;
